ui_tests/output_missing_err.stderr
error: In this function, all references must be annotated with a lifetime.
 --> ui_tests/output_missing_err.rs:4:49
  |
4 | fn identity<'a, 'b>(a: &'a i32, _b: &'b i32) -> &i32 {
  |                                                 ^
